# time-series-roughness-estimation

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: demo.ipynb
src/: constants.py  generate.py  models.py  utils.py
tools/: test.py  train.py
