[project]
name = "time-series-roughness-estimation"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch==2.5.1+cu121",
    "torchaudio==2.5.1+cu121",
    "torchvision==0.20.1",
    "einops>=0.8.0",
    "ipykernel",
    "matplotlib",
    "numpy<2.0.0",
    "scipy",
    "pandas",
    "pillow",
    "tqdm",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }